# empyric

./: .gitignore  .readthedocs.yaml  =2022.1.0  =3.6  LICENSE  README.md  adapter.py  adapters.py  control.py  data_20230531-150016.csv  elements.py  experiment.py  experimentgui.html  graphics.py  gui.py  guis.py  instrumentation.py  instruments.py  processor.py  pylintrc  pyproject.toml  requirements.txt  routines.py  runcard_template.csv  runcard_template.yaml  setup.py  todo.txt  util_funcs.py  utilities.py
collection/: humans.py  instrument.py  multimeters.py  outreach.py  sourcemeters.py  supplies.py  thermometers.py
docs/: adapters.rst  barometers.rst  conf.py  controllers.rst  experiments.rst  graphics.rst  henon_runcard_example.yaml  humans.rst  index.rst  instruments.rst  multimeters.rst  routines.rst  runcard_template.yaml  runcards.rst  scopes.rst  sourcemeters.rst  spectrometers.rst  supplies.rst  types.rst  variables.rst
empyric/: .readthedocs.yaml  __init__.py  adapters.py  experiment.py  graphics.py  instruments.py  rest.py  routines.py  runcard_schema.yaml  tools.py  types.py  variables.py
examples/: henon_python_example.py  henon_runcard_example.py  henon_runcard_example.yaml  select_runcard.py
instrumentation/: instrument.py  sourcemeters.py  thermometers.py
instruments/: barometers.py  basics.py  humans.py  multimeters.py  outreach.py  sourcemeters.py  supplies.py  thermometers.py
mercury_old/: elements.py  instrumentation.py  runcard_template.yaml
stash/: barometers.py  basics.py  humans.py  multimeters.py  outreach.py  phidget.py  sourcemeters.py  supplies.py  thermometers.py
testing/: henon_followup_runcard.yaml  henon_map_test.yaml  henon_runcard.yaml  launcher.py  noise_generator_test.yaml  noise_test_launcher.py  scopes.py  sms_test.yaml
tests/: test_experiment.py
(+112 files in other folders)
