[tool.poetry]
name = "empyric"
version = "0.3.1"
description = "A package for experiment automation"
authors = ["Daniel Merthe <dmerthe@gmail.com>"]
readme = "README.md"
repository = "https://github.com/dmerthe/empyric"
packages = [
    { include = "empyric"},
]
classifiers = [
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.13"
numpy = "2.1.0"
scipy = "^1.10"
matplotlib = "3.8.4"  # does not work with Python 3.13; must wait for new release
pandas = "1.5.3"
pykwalify = "1.8.0"
bayesian-optimization = "1.4.3"
dill = "0.3.7"
"ruamel.yaml" = "0.17.21"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pylint = "*"
black = "*"

[tool.poetry.scripts]
empyric = "empyric:execute"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
